--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -29,7 +29,7 @@ jobs:
         pytest --cov=./
     - name: Upload coverage report
       run: |
-        codecovname: Run tests
+        codecov
 
 on:
   push:
